[gd_scene load_steps=36 format=3 uid="uid://c6nwjmolrwa8n"]

[ext_resource type="Texture2D" uid="uid://dldg0r2sps0dd" path="res://final_animations/f7e1bc624d254670cb060dc20440f952Mrt7vPbOrMVRdk3P-0.png" id="1_8h4dq"]
[ext_resource type="Script" path="res://scripts/vampire.gd" id="1_43cym"]
[ext_resource type="Texture2D" uid="uid://b1b6gs8olqjb0" path="res://final_animations/f7e1bc624d254670cb060dc20440f952Mrt7vPbOrMVRdk3P-1.png" id="2_7cww1"]
[ext_resource type="Texture2D" uid="uid://b7h0k5psiepvh" path="res://final_animations/f7e1bc624d254670cb060dc20440f952Mrt7vPbOrMVRdk3P-2.png" id="3_ye83j"]
[ext_resource type="Texture2D" uid="uid://dvdvfnhinl7cf" path="res://final_animations/f7e1bc624d254670cb060dc20440f952Mrt7vPbOrMVRdk3P-3.png" id="4_n6bxi"]
[ext_resource type="Texture2D" uid="uid://bmudwnw1umth5" path="res://final_animations/f7e1bc624d254670cb060dc20440f952Mrt7vPbOrMVRdk3P-4.png" id="5_gbsmh"]
[ext_resource type="Texture2D" uid="uid://ces8jsk5xsn87" path="res://final_animations/f7e1bc624d254670cb060dc20440f952Mrt7vPbOrMVRdk3P-5.png" id="6_opucf"]
[ext_resource type="Texture2D" uid="uid://cd86hmush2l6r" path="res://final_animations/f7e1bc624d254670cb060dc20440f952Mrt7vPbOrMVRdk3P-6.png" id="7_d2omw"]
[ext_resource type="Texture2D" uid="uid://cpd1webnmj7jg" path="res://final_animations/f7e1bc624d254670cb060dc20440f952Mrt7vPbOrMVRdk3P-7.png" id="8_j1wef"]
[ext_resource type="Texture2D" uid="uid://tcyrb4vt2ga2" path="res://final_animations/f7e1bc624d254670cb060dc20440f952Mrt7vPbOrMVRdk3P-8.png" id="9_lfbo4"]
[ext_resource type="Texture2D" uid="uid://78o0atfqdi37" path="res://final_animations/f7e1bc624d254670cb060dc20440f952Mrt7vPbOrMVRdk3P-9.png" id="10_y6id2"]
[ext_resource type="Texture2D" uid="uid://csmycqmenxon4" path="res://final_animations/f7e1bc624d254670cb060dc20440f952Mrt7vPbOrMVRdk3P-10.png" id="11_5vktb"]
[ext_resource type="Texture2D" uid="uid://hqu6l3xxccgv" path="res://final_animations/f7e1bc624d254670cb060dc20440f952Mrt7vPbOrMVRdk3P-11.png" id="12_qtqla"]
[ext_resource type="Texture2D" uid="uid://brch4yusn7flq" path="res://final_animations/f7e1bc624d254670cb060dc20440f952Mrt7vPbOrMVRdk3P-12.png" id="13_j35h1"]
[ext_resource type="Texture2D" uid="uid://ba1unsoxh8u2j" path="res://final_animations/f7e1bc624d254670cb060dc20440f952Mrt7vPbOrMVRdk3P-13.png" id="14_oi5o2"]
[ext_resource type="Texture2D" uid="uid://d12ypldawexp3" path="res://final_animations/f7e1bc624d254670cb060dc20440f952Mrt7vPbOrMVRdk3P-14.png" id="15_uipw3"]
[ext_resource type="Texture2D" uid="uid://b0253myi5a7k4" path="res://final_animations/f7e1bc624d254670cb060dc20440f952Mrt7vPbOrMVRdk3P-15.png" id="16_5oueo"]
[ext_resource type="Texture2D" uid="uid://ceru6ljm1rguk" path="res://final_animations/f7e1bc624d254670cb060dc20440f952Mrt7vPbOrMVRdk3P-16.png" id="17_vfufi"]
[ext_resource type="Texture2D" uid="uid://bdnwcalhy2qfy" path="res://final_animations/f7e1bc624d254670cb060dc20440f952Mrt7vPbOrMVRdk3P-17.png" id="18_ub7y1"]
[ext_resource type="Texture2D" uid="uid://dy6gf2jl6exrg" path="res://final_animations/f7e1bc624d254670cb060dc20440f952Mrt7vPbOrMVRdk3P-18.png" id="19_8yc2q"]
[ext_resource type="Texture2D" uid="uid://bje42ejcuagfb" path="res://final_animations/f7e1bc624d254670cb060dc20440f952Mrt7vPbOrMVRdk3P-19.png" id="20_h0dsw"]
[ext_resource type="Texture2D" uid="uid://dj2irpgisa34u" path="res://final_animations/f7e1bc624d254670cb060dc20440f952Mrt7vPbOrMVRdk3P-20.png" id="21_gcgo1"]
[ext_resource type="Texture2D" uid="uid://buy6fv0ya42fe" path="res://final_animations/f7e1bc624d254670cb060dc20440f952Mrt7vPbOrMVRdk3P-21.png" id="22_v3aqo"]
[ext_resource type="Texture2D" uid="uid://bxpn142rhemyo" path="res://final_animations/f7e1bc624d254670cb060dc20440f952Mrt7vPbOrMVRdk3P-22.png" id="23_yxham"]
[ext_resource type="Texture2D" uid="uid://cfihr6akl3mr2" path="res://final_animations/f7e1bc624d254670cb060dc20440f952Mrt7vPbOrMVRdk3P-23.png" id="24_2l6ji"]
[ext_resource type="Texture2D" uid="uid://bseclsdee4ojn" path="res://final_animations/908aac2c4669463ec28154631368c69bAs4BgsKqZdJhUBdA-0.png" id="25_gdkru"]
[ext_resource type="Texture2D" uid="uid://d1deqellcbko8" path="res://final_animations/908aac2c4669463ec28154631368c69bAs4BgsKqZdJhUBdA-1.png" id="26_a08xs"]
[ext_resource type="Texture2D" uid="uid://c2vvj0grurq45" path="res://final_animations/908aac2c4669463ec28154631368c69bAs4BgsKqZdJhUBdA-2.png" id="27_agl8p"]
[ext_resource type="Texture2D" uid="uid://40p1goe0syy3" path="res://final_animations/908aac2c4669463ec28154631368c69bAs4BgsKqZdJhUBdA-3.png" id="28_b311i"]
[ext_resource type="Texture2D" uid="uid://c3qknct8a7f3u" path="res://final_animations/908aac2c4669463ec28154631368c69bAs4BgsKqZdJhUBdA-4.png" id="29_5wqud"]
[ext_resource type="Texture2D" uid="uid://du8gws6m2sbd4" path="res://final_animations/908aac2c4669463ec28154631368c69bAs4BgsKqZdJhUBdA-5.png" id="30_3jb7x"]
[ext_resource type="Texture2D" uid="uid://doq70dh4d14o6" path="res://final_animations/908aac2c4669463ec28154631368c69bAs4BgsKqZdJhUBdA-6.png" id="31_los0c"]
[ext_resource type="Texture2D" uid="uid://dq7i7aoqdjcp1" path="res://final_animations/908aac2c4669463ec28154631368c69bAs4BgsKqZdJhUBdA-7.png" id="32_8m4h5"]

[sub_resource type="SpriteFrames" id="SpriteFrames_l1jft"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_8h4dq")
}, {
"duration": 1.0,
"texture": ExtResource("2_7cww1")
}, {
"duration": 1.0,
"texture": ExtResource("3_ye83j")
}, {
"duration": 1.0,
"texture": ExtResource("4_n6bxi")
}, {
"duration": 1.0,
"texture": ExtResource("5_gbsmh")
}, {
"duration": 1.0,
"texture": ExtResource("6_opucf")
}, {
"duration": 1.0,
"texture": ExtResource("7_d2omw")
}, {
"duration": 1.0,
"texture": ExtResource("8_j1wef")
}, {
"duration": 1.0,
"texture": ExtResource("9_lfbo4")
}, {
"duration": 1.0,
"texture": ExtResource("10_y6id2")
}, {
"duration": 1.0,
"texture": ExtResource("11_5vktb")
}, {
"duration": 1.0,
"texture": ExtResource("12_qtqla")
}, {
"duration": 1.0,
"texture": ExtResource("13_j35h1")
}, {
"duration": 1.0,
"texture": ExtResource("14_oi5o2")
}, {
"duration": 1.0,
"texture": ExtResource("15_uipw3")
}, {
"duration": 1.0,
"texture": ExtResource("16_5oueo")
}, {
"duration": 1.0,
"texture": ExtResource("17_vfufi")
}, {
"duration": 1.0,
"texture": ExtResource("18_ub7y1")
}, {
"duration": 1.0,
"texture": ExtResource("19_8yc2q")
}, {
"duration": 1.0,
"texture": ExtResource("20_h0dsw")
}, {
"duration": 1.0,
"texture": ExtResource("21_gcgo1")
}, {
"duration": 1.0,
"texture": ExtResource("22_v3aqo")
}, {
"duration": 1.0,
"texture": ExtResource("23_yxham")
}, {
"duration": 1.0,
"texture": ExtResource("24_2l6ji")
}],
"loop": true,
"name": &"appear",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("25_gdkru")
}, {
"duration": 1.0,
"texture": ExtResource("26_a08xs")
}, {
"duration": 1.0,
"texture": ExtResource("27_agl8p")
}, {
"duration": 1.0,
"texture": ExtResource("28_b311i")
}, {
"duration": 1.0,
"texture": ExtResource("29_5wqud")
}, {
"duration": 1.0,
"texture": ExtResource("30_3jb7x")
}, {
"duration": 1.0,
"texture": ExtResource("31_los0c")
}, {
"duration": 1.0,
"texture": ExtResource("32_8m4h5")
}],
"loop": false,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("32_8m4h5")
}],
"loop": true,
"name": &"ded",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("21_gcgo1")
}, {
"duration": 1.0,
"texture": ExtResource("22_v3aqo")
}, {
"duration": 1.0,
"texture": ExtResource("23_yxham")
}, {
"duration": 1.0,
"texture": ExtResource("24_2l6ji")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dvvw2"]
size = Vector2(262, 338.5)

[node name="vampire" type="CharacterBody2D" groups=["enemies"]]
collision_layer = 2
script = ExtResource("1_43cym")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_l1jft")
animation = &"death"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-4, 184.25)
shape = SubResource("RectangleShape2D_dvvw2")

[node name="VisibleOnScreenEnabler2D" type="VisibleOnScreenEnabler2D" parent="."]
position = Vector2(-9.53674e-07, 194)
scale = Vector2(12, 16.2)

[node name="Timer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="screen_entered" from="VisibleOnScreenEnabler2D" to="." method="_on_visible_on_screen_enabler_2d_screen_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
